tests/negative/test_move_cn.orb
fnc main () () {
    sym (x:(i32 cn) 0);
    >> x;
};